relocating the header tag inside the body and puttin paragraph tags around the footer

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Assignment 5 Creating a Portfolio Webpage using HTML and CSS Float Layout</title>
 </head>
+<body>
   <header>
       <div class="container">
         <h1>Gwen Gibbes</h1>
@@ -19,7 +20,6 @@
         </nav>
    
   </header>  
-<body>
   <main>
       <h2> About Me</h2>
       <section id="about"> 
@@ -41,7 +41,7 @@
       </aside>
     </main>
     <footer>
-        &copy; Gwen Gibbes
+        <p>&copy; Gwen Gibbes</p>
     </footer>
 </body>
 </html>
